--- a/Sources/TreasureHunt-Info.plist
+++ b/Sources/TreasureHunt-Info.plist
@@ -28,7 +28,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.razeware.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.ehr.testOne</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -60,11 +60,11 @@
 			<key>TintColor</key>
 			<dict>
 				<key>Blue</key>
-				<real>0.05098039215686274</real>
+				<real>0.050980392156862737</real>
 				<key>Green</key>
-				<real>0.07843137254901961</real>
+				<real>0.078431372549019607</real>
 				<key>Red</key>
-				<real>0.1411764705882353</real>
+				<real>0.14117647058823529</real>
 			</dict>
 			<key>Translucent</key>
 			<false/>
